patched methods