@@ -2,6 +2,7 @@ package fr.wow.stuff;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import fr.wow.items.Epee;
 import fr.wow.items.Gourdin;
@@ -16,23 +17,21 @@ public class Sacoche {
     private static final Logger LOG = LogManager.getLogger();
 
     //instanciate pommes
-    private Pommes pomme = new Pommes();
+    //private Pommes pomme = new Pommes();
 
     //instanciate raisins
-    private Raisins raisin = new Raisins();
+    //private Raisins raisin = new Raisins();
 
     // Attributes
-    private List<Epee> epeesTot = new ArrayList<>();
-    private List<Gourdin> gourdinsTot = new ArrayList<>();
-    private List<Pommes> pommesTot = new ArrayList<>();
-    private List<Raisins> raisinsTot = new ArrayList<>();
+    //private List<Epee> epeesTot = new ArrayList<>();
+    //private List<Gourdin> gourdinsTot = new ArrayList<>();
+    //private List<Pommes> pommesTot = new ArrayList<>();
+    //private List<Raisins> raisinsTot = new ArrayList<>();
+
+    private List<ISacoche> sacochable = new ArrayList<>();
 
     // Constructor
     public Sacoche() {
-        setEpees(epeesTot);
-        setGourdins(gourdinsTot);
-        setPommes(pommesTot);
-        setRaisins(raisinsTot);
     }
 
     /**
@@ -40,35 +39,36 @@ public class Sacoche {
      * @return
      */
     public List<Epee> getEpees() {
-        return epeesTot.stream().toList();
+        //Recupérer les épées en filtre avec un stream.
+        return sacochable.stream().filter(e -> e instanceof Epee).map(e -> (Epee) e).collect(Collectors.toList());
     }
 
     public void setEpees(List<Epee> epees) {
-        this.epeesTot = epees;
+        this.sacochable.addAll(epees);
     }
 
     public List<Gourdin> getGourdins() {
-        return gourdinsTot.stream().toList();
+        return sacochable.stream().filter(e -> e instanceof Gourdin).map(e -> (Gourdin) e).collect(Collectors.toList());
     }
 
     public void setGourdins(List<Gourdin> gourdins) {
-        this.gourdinsTot = gourdins;
+        this.sacochable.addAll(gourdins);
     }
 
     public List<Pommes> getPommes() {
-        return pommesTot.stream().toList();
+        return sacochable.stream().filter(e -> e instanceof Pommes).map(e -> (Pommes) e).collect(Collectors.toList());
     }
 
     public void setPommes(List<Pommes> pommes) {
-        this.pommesTot = pommes;
+        this.sacochable.addAll(pommes);
     }
 
     public List<Raisins> getRaisins() {
-        return raisinsTot.stream().toList();
+        return sacochable.stream().filter(e -> e instanceof Raisins).map(e -> (Raisins) e).collect(Collectors.toList());
     }
 
     public void setRaisins(List<Raisins> raisins) {
-        this.raisinsTot = raisins;
+        this.sacochable.addAll(raisins);
     }
 
 }
